--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,3 +1,3 @@
 title: Ableton Live
-description: Music production and performance
-theme: jekyll-theme-minimal
+description: Professional digital audio workstation for music production, live performance, and sound design.
+theme: jekyll-theme-cayman
